Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> lexico
Rule 2     lexico -> lexico comandos
Rule 3     lexico -> comandos
Rule 4     comandos -> maincomando subcomando
Rule 5     comandos -> maincomando
Rule 6     maincomando -> CREATE
Rule 7     maincomando -> DELETE
Rule 8     maincomando -> COPY
Rule 9     maincomando -> TRANSFER
Rule 10    maincomando -> RENAME
Rule 11    maincomando -> MODIFY
Rule 12    maincomando -> BACKUP
Rule 13    maincomando -> RECOVERY
Rule 14    maincomando -> DELETE_ALL
Rule 15    maincomando -> OPEN
Rule 16    subcomando -> subcomando sub
Rule 17    subcomando -> sub
Rule 18    sub -> TYPE tipo
Rule 19    sub -> NAME nombre
Rule 20    sub -> BODY STRING
Rule 21    sub -> PATH RUTA
Rule 22    sub -> FROM RUTA
Rule 23    sub -> TO RUTA
Rule 24    sub -> TYPE_TO tipo
Rule 25    sub -> TYPE_FROM tipo
Rule 26    sub -> IP AIP
Rule 27    sub -> PORT APORT
Rule 28    tipo -> BUCKET
Rule 29    tipo -> SERVER
Rule 30    nombre -> ARCHIVO
Rule 31    nombre -> STRING
Rule 32    nombre -> RUTA

Terminals, with rules where they appear

AIP                  : 26
APORT                : 27
ARCHIVO              : 30
BACKUP               : 12
BODY                 : 20
BUCKET               : 28
COPY                 : 8
CREATE               : 6
DELETE               : 7
DELETE_ALL           : 14
FROM                 : 22
IP                   : 26
MODIFY               : 11
NAME                 : 19
OPEN                 : 15
PATH                 : 21
PORT                 : 27
RECOVERY             : 13
RENAME               : 10
RUTA                 : 21 22 23 32
SERVER               : 29
STRING               : 20 31
TO                   : 23
TRANSFER             : 9
TYPE                 : 18
TYPE_FROM            : 25
TYPE_TO              : 24
error                : 

Nonterminals, with rules where they appear

comandos             : 2 3
inicio               : 0
lexico               : 1 2
maincomando          : 4 5
nombre               : 19
sub                  : 16 17
subcomando           : 4 16
tipo                 : 18 24 25

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . lexico
    (2) lexico -> . lexico comandos
    (3) lexico -> . comandos
    (4) comandos -> . maincomando subcomando
    (5) comandos -> . maincomando
    (6) maincomando -> . CREATE
    (7) maincomando -> . DELETE
    (8) maincomando -> . COPY
    (9) maincomando -> . TRANSFER
    (10) maincomando -> . RENAME
    (11) maincomando -> . MODIFY
    (12) maincomando -> . BACKUP
    (13) maincomando -> . RECOVERY
    (14) maincomando -> . DELETE_ALL
    (15) maincomando -> . OPEN

    CREATE          shift and go to state 5
    DELETE          shift and go to state 6
    COPY            shift and go to state 7
    TRANSFER        shift and go to state 8
    RENAME          shift and go to state 9
    MODIFY          shift and go to state 10
    BACKUP          shift and go to state 11
    RECOVERY        shift and go to state 12
    DELETE_ALL      shift and go to state 13
    OPEN            shift and go to state 14

    inicio                         shift and go to state 1
    lexico                         shift and go to state 2
    comandos                       shift and go to state 3
    maincomando                    shift and go to state 4

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> lexico .
    (2) lexico -> lexico . comandos
    (4) comandos -> . maincomando subcomando
    (5) comandos -> . maincomando
    (6) maincomando -> . CREATE
    (7) maincomando -> . DELETE
    (8) maincomando -> . COPY
    (9) maincomando -> . TRANSFER
    (10) maincomando -> . RENAME
    (11) maincomando -> . MODIFY
    (12) maincomando -> . BACKUP
    (13) maincomando -> . RECOVERY
    (14) maincomando -> . DELETE_ALL
    (15) maincomando -> . OPEN

    $end            reduce using rule 1 (inicio -> lexico .)
    CREATE          shift and go to state 5
    DELETE          shift and go to state 6
    COPY            shift and go to state 7
    TRANSFER        shift and go to state 8
    RENAME          shift and go to state 9
    MODIFY          shift and go to state 10
    BACKUP          shift and go to state 11
    RECOVERY        shift and go to state 12
    DELETE_ALL      shift and go to state 13
    OPEN            shift and go to state 14

    comandos                       shift and go to state 15
    maincomando                    shift and go to state 4

state 3

    (3) lexico -> comandos .

    CREATE          reduce using rule 3 (lexico -> comandos .)
    DELETE          reduce using rule 3 (lexico -> comandos .)
    COPY            reduce using rule 3 (lexico -> comandos .)
    TRANSFER        reduce using rule 3 (lexico -> comandos .)
    RENAME          reduce using rule 3 (lexico -> comandos .)
    MODIFY          reduce using rule 3 (lexico -> comandos .)
    BACKUP          reduce using rule 3 (lexico -> comandos .)
    RECOVERY        reduce using rule 3 (lexico -> comandos .)
    DELETE_ALL      reduce using rule 3 (lexico -> comandos .)
    OPEN            reduce using rule 3 (lexico -> comandos .)
    $end            reduce using rule 3 (lexico -> comandos .)


state 4

    (4) comandos -> maincomando . subcomando
    (5) comandos -> maincomando .
    (16) subcomando -> . subcomando sub
    (17) subcomando -> . sub
    (18) sub -> . TYPE tipo
    (19) sub -> . NAME nombre
    (20) sub -> . BODY STRING
    (21) sub -> . PATH RUTA
    (22) sub -> . FROM RUTA
    (23) sub -> . TO RUTA
    (24) sub -> . TYPE_TO tipo
    (25) sub -> . TYPE_FROM tipo
    (26) sub -> . IP AIP
    (27) sub -> . PORT APORT

    CREATE          reduce using rule 5 (comandos -> maincomando .)
    DELETE          reduce using rule 5 (comandos -> maincomando .)
    COPY            reduce using rule 5 (comandos -> maincomando .)
    TRANSFER        reduce using rule 5 (comandos -> maincomando .)
    RENAME          reduce using rule 5 (comandos -> maincomando .)
    MODIFY          reduce using rule 5 (comandos -> maincomando .)
    BACKUP          reduce using rule 5 (comandos -> maincomando .)
    RECOVERY        reduce using rule 5 (comandos -> maincomando .)
    DELETE_ALL      reduce using rule 5 (comandos -> maincomando .)
    OPEN            reduce using rule 5 (comandos -> maincomando .)
    $end            reduce using rule 5 (comandos -> maincomando .)
    TYPE            shift and go to state 18
    NAME            shift and go to state 19
    BODY            shift and go to state 20
    PATH            shift and go to state 21
    FROM            shift and go to state 22
    TO              shift and go to state 23
    TYPE_TO         shift and go to state 24
    TYPE_FROM       shift and go to state 25
    IP              shift and go to state 26
    PORT            shift and go to state 27

    subcomando                     shift and go to state 16
    sub                            shift and go to state 17

state 5

    (6) maincomando -> CREATE .

    TYPE            reduce using rule 6 (maincomando -> CREATE .)
    NAME            reduce using rule 6 (maincomando -> CREATE .)
    BODY            reduce using rule 6 (maincomando -> CREATE .)
    PATH            reduce using rule 6 (maincomando -> CREATE .)
    FROM            reduce using rule 6 (maincomando -> CREATE .)
    TO              reduce using rule 6 (maincomando -> CREATE .)
    TYPE_TO         reduce using rule 6 (maincomando -> CREATE .)
    TYPE_FROM       reduce using rule 6 (maincomando -> CREATE .)
    IP              reduce using rule 6 (maincomando -> CREATE .)
    PORT            reduce using rule 6 (maincomando -> CREATE .)
    CREATE          reduce using rule 6 (maincomando -> CREATE .)
    DELETE          reduce using rule 6 (maincomando -> CREATE .)
    COPY            reduce using rule 6 (maincomando -> CREATE .)
    TRANSFER        reduce using rule 6 (maincomando -> CREATE .)
    RENAME          reduce using rule 6 (maincomando -> CREATE .)
    MODIFY          reduce using rule 6 (maincomando -> CREATE .)
    BACKUP          reduce using rule 6 (maincomando -> CREATE .)
    RECOVERY        reduce using rule 6 (maincomando -> CREATE .)
    DELETE_ALL      reduce using rule 6 (maincomando -> CREATE .)
    OPEN            reduce using rule 6 (maincomando -> CREATE .)
    $end            reduce using rule 6 (maincomando -> CREATE .)


state 6

    (7) maincomando -> DELETE .

    TYPE            reduce using rule 7 (maincomando -> DELETE .)
    NAME            reduce using rule 7 (maincomando -> DELETE .)
    BODY            reduce using rule 7 (maincomando -> DELETE .)
    PATH            reduce using rule 7 (maincomando -> DELETE .)
    FROM            reduce using rule 7 (maincomando -> DELETE .)
    TO              reduce using rule 7 (maincomando -> DELETE .)
    TYPE_TO         reduce using rule 7 (maincomando -> DELETE .)
    TYPE_FROM       reduce using rule 7 (maincomando -> DELETE .)
    IP              reduce using rule 7 (maincomando -> DELETE .)
    PORT            reduce using rule 7 (maincomando -> DELETE .)
    CREATE          reduce using rule 7 (maincomando -> DELETE .)
    DELETE          reduce using rule 7 (maincomando -> DELETE .)
    COPY            reduce using rule 7 (maincomando -> DELETE .)
    TRANSFER        reduce using rule 7 (maincomando -> DELETE .)
    RENAME          reduce using rule 7 (maincomando -> DELETE .)
    MODIFY          reduce using rule 7 (maincomando -> DELETE .)
    BACKUP          reduce using rule 7 (maincomando -> DELETE .)
    RECOVERY        reduce using rule 7 (maincomando -> DELETE .)
    DELETE_ALL      reduce using rule 7 (maincomando -> DELETE .)
    OPEN            reduce using rule 7 (maincomando -> DELETE .)
    $end            reduce using rule 7 (maincomando -> DELETE .)


state 7

    (8) maincomando -> COPY .

    TYPE            reduce using rule 8 (maincomando -> COPY .)
    NAME            reduce using rule 8 (maincomando -> COPY .)
    BODY            reduce using rule 8 (maincomando -> COPY .)
    PATH            reduce using rule 8 (maincomando -> COPY .)
    FROM            reduce using rule 8 (maincomando -> COPY .)
    TO              reduce using rule 8 (maincomando -> COPY .)
    TYPE_TO         reduce using rule 8 (maincomando -> COPY .)
    TYPE_FROM       reduce using rule 8 (maincomando -> COPY .)
    IP              reduce using rule 8 (maincomando -> COPY .)
    PORT            reduce using rule 8 (maincomando -> COPY .)
    CREATE          reduce using rule 8 (maincomando -> COPY .)
    DELETE          reduce using rule 8 (maincomando -> COPY .)
    COPY            reduce using rule 8 (maincomando -> COPY .)
    TRANSFER        reduce using rule 8 (maincomando -> COPY .)
    RENAME          reduce using rule 8 (maincomando -> COPY .)
    MODIFY          reduce using rule 8 (maincomando -> COPY .)
    BACKUP          reduce using rule 8 (maincomando -> COPY .)
    RECOVERY        reduce using rule 8 (maincomando -> COPY .)
    DELETE_ALL      reduce using rule 8 (maincomando -> COPY .)
    OPEN            reduce using rule 8 (maincomando -> COPY .)
    $end            reduce using rule 8 (maincomando -> COPY .)


state 8

    (9) maincomando -> TRANSFER .

    TYPE            reduce using rule 9 (maincomando -> TRANSFER .)
    NAME            reduce using rule 9 (maincomando -> TRANSFER .)
    BODY            reduce using rule 9 (maincomando -> TRANSFER .)
    PATH            reduce using rule 9 (maincomando -> TRANSFER .)
    FROM            reduce using rule 9 (maincomando -> TRANSFER .)
    TO              reduce using rule 9 (maincomando -> TRANSFER .)
    TYPE_TO         reduce using rule 9 (maincomando -> TRANSFER .)
    TYPE_FROM       reduce using rule 9 (maincomando -> TRANSFER .)
    IP              reduce using rule 9 (maincomando -> TRANSFER .)
    PORT            reduce using rule 9 (maincomando -> TRANSFER .)
    CREATE          reduce using rule 9 (maincomando -> TRANSFER .)
    DELETE          reduce using rule 9 (maincomando -> TRANSFER .)
    COPY            reduce using rule 9 (maincomando -> TRANSFER .)
    TRANSFER        reduce using rule 9 (maincomando -> TRANSFER .)
    RENAME          reduce using rule 9 (maincomando -> TRANSFER .)
    MODIFY          reduce using rule 9 (maincomando -> TRANSFER .)
    BACKUP          reduce using rule 9 (maincomando -> TRANSFER .)
    RECOVERY        reduce using rule 9 (maincomando -> TRANSFER .)
    DELETE_ALL      reduce using rule 9 (maincomando -> TRANSFER .)
    OPEN            reduce using rule 9 (maincomando -> TRANSFER .)
    $end            reduce using rule 9 (maincomando -> TRANSFER .)


state 9

    (10) maincomando -> RENAME .

    TYPE            reduce using rule 10 (maincomando -> RENAME .)
    NAME            reduce using rule 10 (maincomando -> RENAME .)
    BODY            reduce using rule 10 (maincomando -> RENAME .)
    PATH            reduce using rule 10 (maincomando -> RENAME .)
    FROM            reduce using rule 10 (maincomando -> RENAME .)
    TO              reduce using rule 10 (maincomando -> RENAME .)
    TYPE_TO         reduce using rule 10 (maincomando -> RENAME .)
    TYPE_FROM       reduce using rule 10 (maincomando -> RENAME .)
    IP              reduce using rule 10 (maincomando -> RENAME .)
    PORT            reduce using rule 10 (maincomando -> RENAME .)
    CREATE          reduce using rule 10 (maincomando -> RENAME .)
    DELETE          reduce using rule 10 (maincomando -> RENAME .)
    COPY            reduce using rule 10 (maincomando -> RENAME .)
    TRANSFER        reduce using rule 10 (maincomando -> RENAME .)
    RENAME          reduce using rule 10 (maincomando -> RENAME .)
    MODIFY          reduce using rule 10 (maincomando -> RENAME .)
    BACKUP          reduce using rule 10 (maincomando -> RENAME .)
    RECOVERY        reduce using rule 10 (maincomando -> RENAME .)
    DELETE_ALL      reduce using rule 10 (maincomando -> RENAME .)
    OPEN            reduce using rule 10 (maincomando -> RENAME .)
    $end            reduce using rule 10 (maincomando -> RENAME .)


state 10

    (11) maincomando -> MODIFY .

    TYPE            reduce using rule 11 (maincomando -> MODIFY .)
    NAME            reduce using rule 11 (maincomando -> MODIFY .)
    BODY            reduce using rule 11 (maincomando -> MODIFY .)
    PATH            reduce using rule 11 (maincomando -> MODIFY .)
    FROM            reduce using rule 11 (maincomando -> MODIFY .)
    TO              reduce using rule 11 (maincomando -> MODIFY .)
    TYPE_TO         reduce using rule 11 (maincomando -> MODIFY .)
    TYPE_FROM       reduce using rule 11 (maincomando -> MODIFY .)
    IP              reduce using rule 11 (maincomando -> MODIFY .)
    PORT            reduce using rule 11 (maincomando -> MODIFY .)
    CREATE          reduce using rule 11 (maincomando -> MODIFY .)
    DELETE          reduce using rule 11 (maincomando -> MODIFY .)
    COPY            reduce using rule 11 (maincomando -> MODIFY .)
    TRANSFER        reduce using rule 11 (maincomando -> MODIFY .)
    RENAME          reduce using rule 11 (maincomando -> MODIFY .)
    MODIFY          reduce using rule 11 (maincomando -> MODIFY .)
    BACKUP          reduce using rule 11 (maincomando -> MODIFY .)
    RECOVERY        reduce using rule 11 (maincomando -> MODIFY .)
    DELETE_ALL      reduce using rule 11 (maincomando -> MODIFY .)
    OPEN            reduce using rule 11 (maincomando -> MODIFY .)
    $end            reduce using rule 11 (maincomando -> MODIFY .)


state 11

    (12) maincomando -> BACKUP .

    TYPE            reduce using rule 12 (maincomando -> BACKUP .)
    NAME            reduce using rule 12 (maincomando -> BACKUP .)
    BODY            reduce using rule 12 (maincomando -> BACKUP .)
    PATH            reduce using rule 12 (maincomando -> BACKUP .)
    FROM            reduce using rule 12 (maincomando -> BACKUP .)
    TO              reduce using rule 12 (maincomando -> BACKUP .)
    TYPE_TO         reduce using rule 12 (maincomando -> BACKUP .)
    TYPE_FROM       reduce using rule 12 (maincomando -> BACKUP .)
    IP              reduce using rule 12 (maincomando -> BACKUP .)
    PORT            reduce using rule 12 (maincomando -> BACKUP .)
    CREATE          reduce using rule 12 (maincomando -> BACKUP .)
    DELETE          reduce using rule 12 (maincomando -> BACKUP .)
    COPY            reduce using rule 12 (maincomando -> BACKUP .)
    TRANSFER        reduce using rule 12 (maincomando -> BACKUP .)
    RENAME          reduce using rule 12 (maincomando -> BACKUP .)
    MODIFY          reduce using rule 12 (maincomando -> BACKUP .)
    BACKUP          reduce using rule 12 (maincomando -> BACKUP .)
    RECOVERY        reduce using rule 12 (maincomando -> BACKUP .)
    DELETE_ALL      reduce using rule 12 (maincomando -> BACKUP .)
    OPEN            reduce using rule 12 (maincomando -> BACKUP .)
    $end            reduce using rule 12 (maincomando -> BACKUP .)


state 12

    (13) maincomando -> RECOVERY .

    TYPE            reduce using rule 13 (maincomando -> RECOVERY .)
    NAME            reduce using rule 13 (maincomando -> RECOVERY .)
    BODY            reduce using rule 13 (maincomando -> RECOVERY .)
    PATH            reduce using rule 13 (maincomando -> RECOVERY .)
    FROM            reduce using rule 13 (maincomando -> RECOVERY .)
    TO              reduce using rule 13 (maincomando -> RECOVERY .)
    TYPE_TO         reduce using rule 13 (maincomando -> RECOVERY .)
    TYPE_FROM       reduce using rule 13 (maincomando -> RECOVERY .)
    IP              reduce using rule 13 (maincomando -> RECOVERY .)
    PORT            reduce using rule 13 (maincomando -> RECOVERY .)
    CREATE          reduce using rule 13 (maincomando -> RECOVERY .)
    DELETE          reduce using rule 13 (maincomando -> RECOVERY .)
    COPY            reduce using rule 13 (maincomando -> RECOVERY .)
    TRANSFER        reduce using rule 13 (maincomando -> RECOVERY .)
    RENAME          reduce using rule 13 (maincomando -> RECOVERY .)
    MODIFY          reduce using rule 13 (maincomando -> RECOVERY .)
    BACKUP          reduce using rule 13 (maincomando -> RECOVERY .)
    RECOVERY        reduce using rule 13 (maincomando -> RECOVERY .)
    DELETE_ALL      reduce using rule 13 (maincomando -> RECOVERY .)
    OPEN            reduce using rule 13 (maincomando -> RECOVERY .)
    $end            reduce using rule 13 (maincomando -> RECOVERY .)


state 13

    (14) maincomando -> DELETE_ALL .

    TYPE            reduce using rule 14 (maincomando -> DELETE_ALL .)
    NAME            reduce using rule 14 (maincomando -> DELETE_ALL .)
    BODY            reduce using rule 14 (maincomando -> DELETE_ALL .)
    PATH            reduce using rule 14 (maincomando -> DELETE_ALL .)
    FROM            reduce using rule 14 (maincomando -> DELETE_ALL .)
    TO              reduce using rule 14 (maincomando -> DELETE_ALL .)
    TYPE_TO         reduce using rule 14 (maincomando -> DELETE_ALL .)
    TYPE_FROM       reduce using rule 14 (maincomando -> DELETE_ALL .)
    IP              reduce using rule 14 (maincomando -> DELETE_ALL .)
    PORT            reduce using rule 14 (maincomando -> DELETE_ALL .)
    CREATE          reduce using rule 14 (maincomando -> DELETE_ALL .)
    DELETE          reduce using rule 14 (maincomando -> DELETE_ALL .)
    COPY            reduce using rule 14 (maincomando -> DELETE_ALL .)
    TRANSFER        reduce using rule 14 (maincomando -> DELETE_ALL .)
    RENAME          reduce using rule 14 (maincomando -> DELETE_ALL .)
    MODIFY          reduce using rule 14 (maincomando -> DELETE_ALL .)
    BACKUP          reduce using rule 14 (maincomando -> DELETE_ALL .)
    RECOVERY        reduce using rule 14 (maincomando -> DELETE_ALL .)
    DELETE_ALL      reduce using rule 14 (maincomando -> DELETE_ALL .)
    OPEN            reduce using rule 14 (maincomando -> DELETE_ALL .)
    $end            reduce using rule 14 (maincomando -> DELETE_ALL .)


state 14

    (15) maincomando -> OPEN .

    TYPE            reduce using rule 15 (maincomando -> OPEN .)
    NAME            reduce using rule 15 (maincomando -> OPEN .)
    BODY            reduce using rule 15 (maincomando -> OPEN .)
    PATH            reduce using rule 15 (maincomando -> OPEN .)
    FROM            reduce using rule 15 (maincomando -> OPEN .)
    TO              reduce using rule 15 (maincomando -> OPEN .)
    TYPE_TO         reduce using rule 15 (maincomando -> OPEN .)
    TYPE_FROM       reduce using rule 15 (maincomando -> OPEN .)
    IP              reduce using rule 15 (maincomando -> OPEN .)
    PORT            reduce using rule 15 (maincomando -> OPEN .)
    CREATE          reduce using rule 15 (maincomando -> OPEN .)
    DELETE          reduce using rule 15 (maincomando -> OPEN .)
    COPY            reduce using rule 15 (maincomando -> OPEN .)
    TRANSFER        reduce using rule 15 (maincomando -> OPEN .)
    RENAME          reduce using rule 15 (maincomando -> OPEN .)
    MODIFY          reduce using rule 15 (maincomando -> OPEN .)
    BACKUP          reduce using rule 15 (maincomando -> OPEN .)
    RECOVERY        reduce using rule 15 (maincomando -> OPEN .)
    DELETE_ALL      reduce using rule 15 (maincomando -> OPEN .)
    OPEN            reduce using rule 15 (maincomando -> OPEN .)
    $end            reduce using rule 15 (maincomando -> OPEN .)


state 15

    (2) lexico -> lexico comandos .

    CREATE          reduce using rule 2 (lexico -> lexico comandos .)
    DELETE          reduce using rule 2 (lexico -> lexico comandos .)
    COPY            reduce using rule 2 (lexico -> lexico comandos .)
    TRANSFER        reduce using rule 2 (lexico -> lexico comandos .)
    RENAME          reduce using rule 2 (lexico -> lexico comandos .)
    MODIFY          reduce using rule 2 (lexico -> lexico comandos .)
    BACKUP          reduce using rule 2 (lexico -> lexico comandos .)
    RECOVERY        reduce using rule 2 (lexico -> lexico comandos .)
    DELETE_ALL      reduce using rule 2 (lexico -> lexico comandos .)
    OPEN            reduce using rule 2 (lexico -> lexico comandos .)
    $end            reduce using rule 2 (lexico -> lexico comandos .)


state 16

    (4) comandos -> maincomando subcomando .
    (16) subcomando -> subcomando . sub
    (18) sub -> . TYPE tipo
    (19) sub -> . NAME nombre
    (20) sub -> . BODY STRING
    (21) sub -> . PATH RUTA
    (22) sub -> . FROM RUTA
    (23) sub -> . TO RUTA
    (24) sub -> . TYPE_TO tipo
    (25) sub -> . TYPE_FROM tipo
    (26) sub -> . IP AIP
    (27) sub -> . PORT APORT

    CREATE          reduce using rule 4 (comandos -> maincomando subcomando .)
    DELETE          reduce using rule 4 (comandos -> maincomando subcomando .)
    COPY            reduce using rule 4 (comandos -> maincomando subcomando .)
    TRANSFER        reduce using rule 4 (comandos -> maincomando subcomando .)
    RENAME          reduce using rule 4 (comandos -> maincomando subcomando .)
    MODIFY          reduce using rule 4 (comandos -> maincomando subcomando .)
    BACKUP          reduce using rule 4 (comandos -> maincomando subcomando .)
    RECOVERY        reduce using rule 4 (comandos -> maincomando subcomando .)
    DELETE_ALL      reduce using rule 4 (comandos -> maincomando subcomando .)
    OPEN            reduce using rule 4 (comandos -> maincomando subcomando .)
    $end            reduce using rule 4 (comandos -> maincomando subcomando .)
    TYPE            shift and go to state 18
    NAME            shift and go to state 19
    BODY            shift and go to state 20
    PATH            shift and go to state 21
    FROM            shift and go to state 22
    TO              shift and go to state 23
    TYPE_TO         shift and go to state 24
    TYPE_FROM       shift and go to state 25
    IP              shift and go to state 26
    PORT            shift and go to state 27

    sub                            shift and go to state 28

state 17

    (17) subcomando -> sub .

    TYPE            reduce using rule 17 (subcomando -> sub .)
    NAME            reduce using rule 17 (subcomando -> sub .)
    BODY            reduce using rule 17 (subcomando -> sub .)
    PATH            reduce using rule 17 (subcomando -> sub .)
    FROM            reduce using rule 17 (subcomando -> sub .)
    TO              reduce using rule 17 (subcomando -> sub .)
    TYPE_TO         reduce using rule 17 (subcomando -> sub .)
    TYPE_FROM       reduce using rule 17 (subcomando -> sub .)
    IP              reduce using rule 17 (subcomando -> sub .)
    PORT            reduce using rule 17 (subcomando -> sub .)
    CREATE          reduce using rule 17 (subcomando -> sub .)
    DELETE          reduce using rule 17 (subcomando -> sub .)
    COPY            reduce using rule 17 (subcomando -> sub .)
    TRANSFER        reduce using rule 17 (subcomando -> sub .)
    RENAME          reduce using rule 17 (subcomando -> sub .)
    MODIFY          reduce using rule 17 (subcomando -> sub .)
    BACKUP          reduce using rule 17 (subcomando -> sub .)
    RECOVERY        reduce using rule 17 (subcomando -> sub .)
    DELETE_ALL      reduce using rule 17 (subcomando -> sub .)
    OPEN            reduce using rule 17 (subcomando -> sub .)
    $end            reduce using rule 17 (subcomando -> sub .)


state 18

    (18) sub -> TYPE . tipo
    (28) tipo -> . BUCKET
    (29) tipo -> . SERVER

    BUCKET          shift and go to state 30
    SERVER          shift and go to state 31

    tipo                           shift and go to state 29

state 19

    (19) sub -> NAME . nombre
    (30) nombre -> . ARCHIVO
    (31) nombre -> . STRING
    (32) nombre -> . RUTA

    ARCHIVO         shift and go to state 33
    STRING          shift and go to state 34
    RUTA            shift and go to state 35

    nombre                         shift and go to state 32

state 20

    (20) sub -> BODY . STRING

    STRING          shift and go to state 36


state 21

    (21) sub -> PATH . RUTA

    RUTA            shift and go to state 37


state 22

    (22) sub -> FROM . RUTA

    RUTA            shift and go to state 38


state 23

    (23) sub -> TO . RUTA

    RUTA            shift and go to state 39


state 24

    (24) sub -> TYPE_TO . tipo
    (28) tipo -> . BUCKET
    (29) tipo -> . SERVER

    BUCKET          shift and go to state 30
    SERVER          shift and go to state 31

    tipo                           shift and go to state 40

state 25

    (25) sub -> TYPE_FROM . tipo
    (28) tipo -> . BUCKET
    (29) tipo -> . SERVER

    BUCKET          shift and go to state 30
    SERVER          shift and go to state 31

    tipo                           shift and go to state 41

state 26

    (26) sub -> IP . AIP

    AIP             shift and go to state 42


state 27

    (27) sub -> PORT . APORT

    APORT           shift and go to state 43


state 28

    (16) subcomando -> subcomando sub .
